--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,7 @@ h1 {
   margin-bottom: 15px;
   font-size: 1.75em;
   text-align: center;
+  color: #006600;
 }
 
 .menu_box {
@@ -25,7 +26,7 @@ h2 {
 	margin-right: 0px;
 	float: right;
 	text-align: center;
-	width: 30%;
+	width: 35%;
 	padding: 2px;
 	border: 1px solid black;
 	background-color: white;
@@ -49,10 +50,7 @@ h2 {
 
 p {
   	padding-left: 15px;
-  	height: auto;
-  	margin-right: auto;
-  	margin-left: auto;
- 	font-family: Helvetica;
+  	padding-right: 15px;
   	color: black;
   	clear: right;
   	color: black; 
